# packages/api/src/api/models/index.ts
@@ -23,10 +23,20 @@ export * from './batchesListResponseDataItem';
 export * from './batchResponse';
 export * from './cancelMeetingRequest';
 export * from './completeProfileRequest';
+export * from './courseResponse';
+export * from './courseResponseWeeklyContentItem';
+export * from './coursesListResponse';
+export * from './coursesListResponseDataItem';
+export * from './coursesListResponseDataItemWeeklyContentItem';
 export * from './createBatchRequest';
 export * from './createMeetingRequest';
 export * from './endMeetingRequest';
 export * from './errorResponse';
+export * from './getAdminCourses200';
+export * from './getAdminCourses200DataItem';
+export * from './getAdminCourses200DataItemWeeklyContentItem';
+export * from './getAdminCourses403';
+export * from './getAdminCourses500';
 export * from './getAdminUsers200';
 export * from './getAdminUsers200DataItem';
 export * from './getAdminUsers200DataItemProfileStatus';
